# Nessy3

./: .gitignore  setup.cfg
nsy3/: __main__.py  ast.py  bytecode.py  compile.py  execution.py  parser.py  serialisation.py  skipanalysis.py
nsy3/executor/: CMakeLists.txt
nsy3/executor/src/: builtinfunction.cpp  builtinfunction.hpp  builtins.cpp  builtins.hpp  bytecode.cpp  bytecode.hpp  exception.cpp  exception.hpp  executionengine.cpp  executionengine.hpp  executionengine_private.hpp  frame.cpp  frame.hpp  functionutils.cpp  functionutils.hpp  main.cpp  object.cpp  object.hpp  serialisation.cpp  serialisation.hpp  thunk.cpp  thunk.hpp
nsy3/tests/: conftest.py  test_parser.nsy3  test_parser.py  test_serialisation.py
nsy3/tests/executor_tests/: test_alias.nsy3  test_boolops.nsy3  test_dvars.nsy3  test_executor.py  test_for_loops.nsy3  test_functions.nsy3  test_if_else.nsy3  test_import.nsy3  test_loops.nsy3  test_num_arith.nsy3  test_num_cmps.nsy3  test_skiping.nsy3  test_strings.nsy3  test_subs.nsy3  test_thunks.nsy3  test_while_loops.nsy3
nsy3/tests/executor_tests/modules/: a.nsy3
